<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back3"
    android:padding="20dp">

    <!-- Logo image -->
    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="132dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo" />

    <!-- Forgot Password title -->

    <!-- Email input field -->
    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="367dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"/>

    <!-- Reset Password button -->
    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:background="@drawable/round_back_primary"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <!-- Reset Password Sent message (hidden by default) -->
    <TextView
        android:id="@+id/text_view_reset_password_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_password_sent"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"

        android:layout_marginTop="20dp"/>

    <!-- Error message (hidden by default) -->
    <TextView
        android:id="@+id/text_view_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_password_error"
        android:textColor="@color/purple_200"
        android:textSize="14sp"
        android:visibility="gone"

        android:layout_marginTop="20dp"/>

    <!-- Back to Login button -->
    <Button
        android:id="@+id/button_back_to_login"
        android:layout_marginTop="40dp"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Back to Login"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>